2007-04-26  Christopher Brichford  <chrisb@adobe.com>

        Reviewed by Timothy Hatcher.

        - Fix for Bug 13204: Submit initial version of mac project files for apollo
          port of WebCore
          http://bugs.webkit.org/show_bug.cgi?id=13204

        * WebCore.apolloproj/mac/WebCore.Debug.xcconfig: Added.
        * WebCore.apolloproj/mac/WebCore.Release.xcconfig: Added.
        * WebCore.apolloproj/mac/WebCore.xcconfig: Added.
        * WebCore.apolloproj/mac/WebCore.xcodeproj/project.pbxproj: Added.

2007-04-26  Alp Toker  <alp@atoker.com>

        Reviewed by Maciej.

        http://bugs.webkit.org/show_bug.cgi?id=13505
        Cast loses precision on x86_64

        * platform/graphics/cairo/GraphicsContextCairo.cpp:
        (WebCore::GraphicsContext::beginTransparencyLayer):
        (WebCore::GraphicsContext::endTransparencyLayer):
        Use a stack of opacity values instead of Cairo user data.

2007-04-26  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13500
          REGRESSION: Listbox scrollbar does not reflect actual scrolled position when selected option is added after layout

        Test: fast/forms/listbox-scrollbar-incremental-load.html

        The scroller position was not updated correctly during insertion, since
        scrollbar proportions are updated only during layout

        * rendering/RenderListBox.cpp:
        (WebCore::RenderListBox::selectionChanged): Delay scrolling to reveal the
        selection until after layout if m_optionsChanged is set. Layout is
        guaranteed to happen soon when the flag is set.

2007-04-26  David Hyatt  <hyatt@apple.com>

        Fix for 13511, crash on a counters page.  Make sure that RenderTexts
        never get a null StringImpl.  I would have added an assert that the length
        had to be nonzero also, but unfortunately editing creates empty RenderTexts