@@ -1,3 +1,13 @@
+2007-04-26  Matt Perry  <mpComplete@gmail.com>
+
+        Reviewed by Maciej.
+
+        Added a version check to hackAroundLibXMLEntityBug, since that bug has
+        been fixed in recent versions of libxml2.
+
+        * dom/XMLTokenizer.cpp:
+        (WebCore::hackAroundLibXMLEntityBug):
+
 2007-04-26  Christopher Brichford  <chrisb@adobe.com>
 
         Reviewed by Timothy Hatcher.
